--- a/dashboard/templates/joint/body_big_line_chart_for_one_metrics_tag.html.j2
+++ b/dashboard/templates/joint/body_big_line_chart_for_one_metrics_tag.html.j2
@@ -5,6 +5,7 @@
     var option_{{ name }} = {
         title: {
             text: '{{ name }}',
+            subtext: 'from {{ append_info }}',
             textStyle:{
                 width: 1200,
                 overflow: "break",
