--- a/dashboard/templates/joint/body_center_line_chart_for_vnode_status.html.j2
+++ b/dashboard/templates/joint/body_center_line_chart_for_vnode_status.html.j2
@@ -4,6 +4,7 @@
     var option = {
         title: {
             text: '{{ name }}',
+            subtext: 'from {{ append_info }}',
             textStyle:{
                 width: 450,
                 overflow: "break",
