hide other line when calc tps first time.

--- a/dashboard/templates/joint/body_small_line_chart_for_one_metrics_tag_one_ip_with_tps.html.j2
+++ b/dashboard/templates/joint/body_small_line_chart_for_one_metrics_tag_one_ip_with_tps.html.j2
@@ -39,6 +39,10 @@
         
         koption_{{ index }}.legend.data.push('value_tps');
         koption_{{ index }}.series.push(value_tps_series_data)
+
+        koption_{{ index }}.legend.selected['count'] = false
+        koption_{{ index }}.legend.selected['value'] = false
+        koption_{{ index }}.legend.selected['rate'] = false
         
         myChart_{{ index }}.setOption(koption_{{ index }}, true)
         return
