--- a/dashboard/templates/joint/body_big_line_chart_for_one_metrics_tag_with_tps.html.j2
+++ b/dashboard/templates/joint/body_big_line_chart_for_one_metrics_tag_with_tps.html.j2
@@ -81,7 +81,8 @@
         for(__i = 0;__i < data_array[0].data.length;__i++){
             var sum = 0;
             for(_ind = 0; _ind < data_array.length;++_ind){
-                sum = sum + Number(data_array[_ind].data[__i]);
+                if(data_array[_ind].data[__i])
+                    sum = sum + Number(data_array[_ind].data[__i]);
             }
             sum_data_array.push(sum.toFixed(2));
         }
