update message routing api

--- a/dashboard/templates/joint/body_big_graph_chart_for_message_routing.html.j2
+++ b/dashboard/templates/joint/body_big_graph_chart_for_message_routing.html.j2
@@ -1,4 +1,4 @@
-<div id = "infos">
+<div id = "infos" style= "float:left">
 <ul>
 {% for name,value in msg_info.items() -%}
 <li>{{name}} : {{value}}</li>
@@ -14,8 +14,7 @@
 
     option = {
         title: {
-            text: "P2P message DEMO",
-            subtext: "Default layout",
+            text: "broadcast message routing",
             top: "bottom",
             left: "right"
         },
