--- a/dashboard/templates/query_center/query_message_page.html.j2
+++ b/dashboard/templates/query_center/query_message_page.html.j2
@@ -1,8 +1,38 @@
 <script>
+let default_database_str = 'choose database';
 $("#query_msg_hash").click(function () {
     database = $(".database_selector").val();
     msg_hash = $("#hash_input").val();
+    if(database == default_database_str){
+        $("#Result_DIV").html('please choose database ');
+        return
+    }
     query_path = "/query_message_routing/?database=" + database +  "&msg_hash=" + msg_hash
+    console.log(query_path)
+    htmlobj = $.ajax({
+        url: query_path,
+        async: true,
+        beforeSend: function () {
+            $("#Result_DIV").animate({ opacity: .4 }, 500, function () { })
+            $("#loading").show();
+            console.log("before send");
+        },
+        complete: function () {
+            $("#Result_DIV").animate({ opacity: 1 }, 1000, function () { })
+            $("#loading").hide();
+            $("#Result_DIV").html(htmlobj.responseText);
+            console.log("after send");
+        },
+
+    });
+});
+$("#random_message").click(function () {
+    database = $(".database_selector").val();
+    if(database == default_database_str){
+        $("#Result_DIV").html('please choose database ');
+        return
+    }
+    query_path = "/query_random_message_routing/?database=" + database
     console.log(query_path)
     htmlobj = $.ajax({
         url: query_path,
@@ -32,6 +62,7 @@ $("#query_msg_hash").click(function () {
 </select>
 Message Hash: <input type="text" id = "hash_input">
 <button id="query_msg_hash" class="query_button" type="button">query_message</button>
+<button id="random_message" class="query_button" type="button">random_message</button>
 </div>
 
 <div id="Result_DIV">
