--- a/dashboard/templates/query_center/raw_query_help.html
+++ b/dashboard/templates/query_center/raw_query_help.html
@@ -934,6 +934,50 @@
             </li>
         </ul>
 
+        <h3 class="mume-header" id="%E6%9F%A5%E8%AF%A2%E5%B9%BF%E6%92%AD%E6%B6%88%E6%81%AF%E6%80%A7%E8%83%BD">
+            &#x67E5;&#x8BE2;&#x5E7F;&#x64AD;&#x6D88;&#x606F;&#x6027;&#x80FD;</h3>
+      
+          <h4 class="mume-header"
+            id="%E6%9F%A5%E8%AF%A2%E6%9F%90%E4%B8%AA%E7%8E%AF%E5%A2%83%E9%87%8C%E7%9A%84%E6%B6%88%E6%81%AF%E5%88%97%E8%A1%A8">
+            &#x67E5;&#x8BE2;&#x67D0;&#x4E2A;&#x73AF;&#x5883;&#x91CC;&#x7684;&#x6D88;&#x606F;&#x5217;&#x8868;</h4>
+      
+          <ul>
+            <li>url: <code>/dw-api/query_message_hash_list/</code></li>
+            <li>&#x8BF4;&#x660E;&#xFF1A; &#x968F;&#x673A;&#x8FD4;&#x56DE;&#x6700;&#x591A;50&#x6761;&#x6D88;&#x606F;hash</li>
+            <li>&#x53C2;&#x6570;&#x5217;&#x8868;&#xFF1A;
+              <ul>
+                <li><code>env</code>: &#x5FC5;&#x586B;&#xFF0C;&#x6570;&#x636E;&#x5E93;&#x540D;&#x79F0;</li>
+              </ul>
+            </li>
+            <li>&#x793A;&#x4F8B;&#x67E5;&#x8BE2;url:
+              <ul>
+                <li><code>http://206.189.198.173/dw-api/query_message_hash_list?env=p2ptest_galileo_812</code></li>
+              </ul>
+            </li>
+          </ul>
+          <h4 class="mume-header"
+            id="%E6%9F%A5%E8%AF%A2%E6%9F%90%E4%B8%AA%E7%8E%AF%E5%A2%83%E9%87%8C%E7%9A%84%E6%B6%88%E6%81%AF%E6%8C%87%E6%A0%87">
+            &#x67E5;&#x8BE2;&#x67D0;&#x4E2A;&#x73AF;&#x5883;&#x91CC;&#x7684;&#x6D88;&#x606F;&#x6307;&#x6807;</h4>
+      
+          <ul>
+            <li>url: <code>/dw-api/query_multi_message_hash_info/</code></li>
+            <li>&#x53C2;&#x6570;&#x5217;&#x8868;&#xFF1A;
+              <ul>
+                <li><code>env</code>: &#x5FC5;&#x586B;&#xFF0C;&#x6570;&#x636E;&#x5E93;&#x540D;&#x79F0;</li>
+                <li><code>msg_hash</code>:
+                  &#x5FC5;&#x586B;&#xFF0C;&#x6D88;&#x606F;hash&#xFF0C;&#x53EF;&#x4EE5;&#x8FDE;&#x7EED;&#x586B;&#x5199;&#x591A;&#x6761;&#xFF0C;&#x7528;<code>,</code>&#x5206;&#x5272;
+                </li>
+              </ul>
+            </li>
+            <li>&#x793A;&#x4F8B;&#x67E5;&#x8BE2;url:
+              <ul>
+                <li>
+                  <code>http://206.189.198.173/dw-api/query_multi_message_hash_info?env=p2ptest_galileo_812&amp;msg_hash=3259871759,2210101689,3317765068,888585835,423201776,569093277,50242205,1136710889,4190833635,1999213725,1155462895,2790255800,3417110935,3373769227,2874573128,1385807941,1665457326,3427187228,1051615401,3335401037,3833852723,3903389268,2581400230,1715213895,1056996504,1944050405,309627796,2628999572,1831730761,3977281083,2556159040,3701716471,1236101865,3916455390,3133330419,1168291530,920682854,3459355451,3913269516,3464093205,2454496147,1915230101,3931409080,481517387,541891477,3383782105,431050648,2289597883,2753877192,2876448179</code>
+                </li>
+              </ul>
+            </li>
+          </ul>
+
     </div>
 
 
